--- a/index.html
+++ b/index.html
@@ -1,72 +1,184 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="JVM Options Configuration Tool - A JVM config tool which allows us to see the various flags/parameters used in changing the behaviour, debugging and many more features within the JVM.">
+    <meta name="author" content="Sachin Handiekar">
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="JVM Options Configuration Tool : JVM Options Configuration Tool">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="icon" href="favicon.ico">
 
     <title>JVM Options Configuration Tool</title>
-  </head>
 
-  <body>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="css/jumbotron-narrow.css" rel="stylesheet">
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/sachin-handiekar/jvmconfig">View on GitHub</a>
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]>
+    <script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="js/ie-emulation-modes-warning.js"></script>
+    <style type="text/css"></style>
 
-          <h1 id="project_title">JVM Options Configuration Tool</h1>
-          <h2 id="project_tagline">JVM Options Configuration Tool</h2>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/sachin-handiekar/jvmconfig/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/sachin-handiekar/jvmconfig/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+<body>
+
+<div class="container">
+    <div class="header clearfix">
+
+        <!--
+        <nav>
+            <ul class="nav nav-pills pull-right">
+                <li role="presentation" class="active"><a href="#">Home</a>
+                </li>
+                <li role="presentation"><a href="#">About</a></li>
+                <li role="presentation"><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        -->
+
+        <h3 class="text-muted">JVM Options Configuration Tool</h3>
     </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+    <form role="form" class="form-horizontal">
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+        <!-- JVM Vendor -->
+        <div class="form-group">
+            <label class="col-sm-5" for="jvmVendor">JVM Vendor <a href="#" data-toggle="tooltip" title="A JVM Vendor"><i class='glyphicon glyphicon-info-sign'></i></a>
+            </label>
+            <div class="col-sm-5">
+                <select class="form-control" id="jvmVendor">
+                    <option value="oracle" selected>Oracle</option>
+                    <option value="openjdk" disabled>OpenJDK (not implemented)</option>
+                    <option value="ibm" disabled>IBM (not implemented)</option>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+                </select>
+            </div>
+        </div>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+        <!-- GC Collector -->
+        <div class="form-group">
+            <label class="col-sm-5" for="gcCollector">GC Collector</label>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+            <div class="col-sm-5">
+                <select class="form-control" id="gcCollector">
+                    <option disabled selected>-- Select an option --</option>
+                    <option value="cms">CMS (low pause)</option>
+                    <option value="parallel">Parallel (throughput)</option>
+                    <option value="g1">G1 (low pause)</option>
+                </select>
+            </div>
+        </div>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+        <div class="panel panel-default">
+            <div class="panel-heading">Debugging</div>
+            <div class="panel-body">
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">JVM Options Configuration Tool maintained by <a href="https://github.com/sachin-handiekar">sachin-handiekar</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+                <!-- Enable GC Logging    -->
+                <div class="form-group">
+                    <label class="col-sm-5" for="printGCDetails">Enable GC Logging</label>
+                    <div class="col-sm-5">
+                        <input id="printGCDetails" type="checkbox" value="">
+                    </div>
+                </div>
 
-    
 
-  </body>
+
+                <!-- Enable GC Log Rotation   -->
+                <div class="form-group">
+                    <label class="col-sm-5" for="enableGCLogRotation">Enable GC Log Rotation</label>
+                    <div class="col-sm-5">
+                        <input id="enableGCLogRotation" type="checkbox" value="">
+                    </div>
+                </div>
+
+
+                <!-- HeapDump on OnOutOfMemoryError   -->
+                <div class="form-group">
+                    <label class="col-sm-5" for="heapDumpOnOOMemory">Enable HeapDump on OutOfMemoryError</label>
+                    <div class="col-sm-5">
+                        <input id="heapDumpOnOOMemory" type="checkbox" value="">
+                    </div>
+                </div>
+
+                <!-- ErrorFile   -->
+                <div class="form-group">
+                    <label class="col-sm-5" for="enableErrorFile">Enable ErrorData on exit</label>
+                    <div class="col-sm-5">
+                        <input id="enableErrorFile" type="checkbox" value="">
+                    </div>
+                </div>
+
+
+
+            </div>
+        </div>
+
+
+        <div class="panel panel-default">
+            <div class="panel-heading">Performance</div>
+            <div class="panel-body">
+
+
+
+                <!-- AggressiveOpts   -->
+                <div class="form-group">
+                    <label class="col-sm-5" for="aggressiveOpts">Enable Aggressive Opts</label>
+                    <div class="col-sm-5">
+                        <input id="aggressiveOpts" type="checkbox" value="">
+                    </div>
+                </div>
+
+
+
+            </div>
+        </div>
+
+
+        <!-- JVM Reference Options -->
+        <label class="col-sm-5" for="gcCollector">Summary</label>
+        <br/>
+
+        <textarea id="jvmFlagResult" class="form-control" style="height: 180px" placeholder="JVM Options Summary"></textarea>
+
+    </form>
+
+
+    <footer class="footer">
+        <p>Developed by <a href="http://sachinhandiekar.com">Sachin Handiekar</a></p>
+    </footer>
+
+    <!-- github banner    -->
+    <a href="https://github.com/you">
+        <img style="position: absolute; top: 0; right: 0; border: 0;"
+             src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67"
+             alt="Fork me on GitHub"
+             data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+
+
+</div> <!-- /container -->
+
+
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="js/ie10-viewport-bug-workaround.js"></script>
+
+<script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script type='text/javascript' src="js/bootstrap.min.js"></script>
+<script type='text/javascript' src="js/app.js"></script>
+
+
+</body>
 </html>
