--- a/index.html
+++ b/index.html
@@ -163,6 +163,15 @@
                 </div>
 
 
+                <!-- Enable Large pages   -->
+                <div class="form-group">
+                    <label class="col-sm-5" for="largePages">Enable Large Pages</label>
+                    <div class="col-sm-5">
+                        <input id="largePages" type="checkbox" value="">
+                    </div>
+                </div>
+
+
             </div>
         </div>
 
