Added h1 and h2 tags

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         </nav>
         -->
 
-        <h3 class="text-muted">JVM Options Configuration Tool</h3>
+        <h1 class="text-muted">JVM Options Configuration Tool</h1>
+        A JVM config tool which allows us to see the various flags/parameters used in changing the behaviour, debugging and many more features within the JVM.</h2>
     </div>
 
 
