Added CDN links for bootstrap js and css

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
     <link rel="icon" href="favicon.ico">
 
     <title>JVM Options Configuration Tool</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"
+          integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     <link href="css/jumbotron-narrow.css" rel="stylesheet">
 
@@ -47,7 +52,8 @@
         -->
 
         <h1 class="text-muted">JVM Options Configuration Tool</h1>
-        A JVM config tool which allows us to see the various flags/parameters used in changing the behaviour, debugging and many more features within the JVM.</h2>
+        A JVM config tool which allows us to see the various flags/parameters used in changing the behaviour, debugging
+        and many more features within the JVM.</h2>
     </div>
 
 
@@ -84,7 +90,6 @@
         </div>
 
 
-
         <!-- Garbage First (G1) Garbage Collection Options -->
         <div id="g1ExtraFlags" class="panel panel-default">
             <div class="panel-heading">Garbage First (G1) Garbage Collection Options</div>
@@ -102,7 +107,6 @@
 
             </div>
         </div>
-
 
 
         <!-- Debugging JVM Flags -->
@@ -206,11 +210,16 @@
 <script src="js/ie10-viewport-bug-workaround.js"></script>
 
 <script type='text/javascript' src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<script type='text/javascript' src="js/bootstrap.js"></script>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+        integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+        crossorigin="anonymous"></script>
+
 <script type='text/javascript' src="js/app.js"></script>
 
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4e3c6a1d62498f68" async="async"></script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4e3c6a1d62498f68"
+        async="async"></script>
 
 </body>
 </html>
